# ConnerLandingProj

./: .gitignore
src/def_idling/: CMakeLists.txt  package.xml
src/def_idling/src/: default_idle.cpp
src/landing_planner/: CMakeLists.txt  package.xml
src/landing_planner/include/landing_planner/: PolyTraj.h  differential_flatness.h  motion_generator.h
src/landing_planner/launch/: init_idle.launch  plan_exec.launch
src/landing_planner/msg/: PlanRequest.msg  Trajectory.msg
src/landing_planner/src/: planner.cpp  px4_cmd_sender.cpp  usr_input.cpp
src/offb_arm_default/: CMakeLists.txt  package.xml
src/offb_arm_default/src/: offb_arm_init.cpp
